# uhc-doc

./: LICENSE  Makefile  README.md  config.status  configure  configure.ac
figs/: files.mk
figs/flops2016-keynote/: lam1.ppd  lam1env.ppd  lam1err.ppd  lam1finsubstLam.ppd  lam1finsubstRoot.ppd  lam1pp.ppd  lam1ppLam.ppd  lam1subst.ppd  lam1ty.ppd  lam1uniq.ppd
latex/: boxedcode.sty  files.mk
lhs2TeX/: pretty.fmt
mk/: config.mk.in  shared.mk.in
src/: files.mk
src/hmdemo/: Lam.crul  Lam.rul  Lam_A.ag  Lam_A.cag  files.mk  t1id  t2err  t3id  t4err  t5id
src/text2text/: Common.hs  Plugin.hs  Text2Text.hs  files.mk  text2text.cabal.in
src/text2text/Text/: Parser.hs
src/text2text/Text/Parser/: Common.hs  DocLaTeX.hs
src/text2text/Text/Trf/: UniformContent.ag
text/: SlidesCopingComplexity.cltex  ToolDocEHC.cltex  TopicCHRLocalInst.cltex  UHCInfo.cltex.in  files-targets.mk  files-variants.mk  files1.mk  files2-jeroen.mk  files2-john.mk  files2.mk  flops2016-keynote.bib  main.cltex  mainsty.clsty
www/: files.mk
